sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:21: error: not found: value teste
      teste=teste+1
      ^